fixed the bottom scrollbar issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@
 }
 .notes{
   width: 100%;
-  margin: 2rem;
+  // margin: 2rem;
   margin-top: 0px;
   display: flex;
   flex-wrap: wrap;
