--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -1,5 +1,5 @@
 .header{
-    width: 100vw;
+    width: 100%;
     height: 60px;
     background-color: #f7b83c;
     display: flex;
@@ -26,7 +26,7 @@
         justify-content: flex-start;
         align-items: center;
         .brand__icon{
-            width: 1.75rem;
+            width: 1.5rem;
             margin-right: 5px;
             // color: rgb(49, 19, 19);
         }
